Test and fix datatype conversions
Fixes #10